docroot/css/site.css
/* ... */
#rememberedhdiv { background:transparent; }
#homepenhdiv { background:transparent; }
#settingsbuttondiv { background:transparent; }
#profstarhdiv { background:transparent; }
#chead { height:0px; clear:both; }  /* top pad if needed for profile content */
#cmain { clear:both; padding: 8px 0px 0px 0px; }
#overlaydiv { position:absolute; left:70px; top:80px; padding: 10px;
  visibility:hidden; border-radius:10px; max-width:85%;
  background-image: url('../img/dlgback.png');
  box-shadow:10px 10px 5px #888888; border: 1px solid #666666; }
#dlgdiv { position:absolute; left:20px; top:60px;
  visibility:hidden; 
  max-width:85%;
  padding:1px;
  background-color: #666;
  border-top-left-radius: 210px 20px;
  border-bottom-right-radius: 210px 20px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border: 1px solid #666666; 
  box-shadow:10px 10px 5px #888888; }
#dlgborderdiv {
  padding:4px;
  background-color: #fff;
  background-image: url('../img/dlgborder.png');
  border-top-left-radius: 210px 20px;
  border-bottom-right-radius: 210px 20px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 10px;
}
#dlginsidediv {
  padding:4px;
  background-color: #fff;
  background-image: url('../img/dlgback.png');
  border-top-left-radius: 210px 20px;
  border-bottom-right-radius: 210px 20px;
  border-top-right-radius: 10px;
  border-bottom-left-radius: 10px;
}
#closeline { text-align:right; font-size:x-small; }
.dlgclosex { float:right; font-size:x-small; }
.floatclear { clear:both; }
.navico, .navicodis, .naviconopad, .naviconospace { 
  margin:0px 0px 0px 14px; padding:4px; vertical-align:bottom; }
.navicodis { opacity:0.3; filter:alpha(opacity=30); }
.naviconopad { padding:0px; }
.naviconospace { margin:0px; padding:0px; }
.rssico { height:11px; width:11px; vertical-align:middle; padding:0px 5px;}
.shsico { height:20px; width:20px; vertical-align:middle; 
  padding:0px 0px 0px 10px;}
.svcico, .loginico { margin:0px 0px 0px 20px; border:none; 
  vertical-align:middle; }
.svcico { height:20px; width:20px; }
.loginico { height:32px; width:32px; }
.shareico, .shareicodis { height:32px; width:32px; margin:5px 15px;
  border:none; vertical-align:middle; }
.shareicodis { opacity:0.3; filter:alpha(opacity=30); }
.revtypeico { vertical-align:bottom; }
.respico { vertical-align:bottom; }
.respicodis { opacity:0.3; filter:alpha(opacity=30); }
#forgotpw { font-size:small; }
#signinbuttondiv { background:#70bbe9;
 color:#003; font-size:x-large; font-weight:normal;
 padding:5px 10px; display:table; cursor:pointer; 
 border: 1px solid #003; border-radius:5px; box-shadow: 5px 5px 2px #888888 }

/* >> intro layout */
#bookslidediv { text-align:center; }
.bookmarkletlinkdiv { padding:5px 20px; text-align:center; }
.bookmarkletdescr { font-size:small; text-align:right; 
  padding:0px 0px 0px 40px;}
#logindiv { margin:auto; }
#loginform { margin:auto; }
#loginstatdiv { font-size:small; }
#loginvisualelementsdiv { padding:0px 10px; }
#loginbuttonsdiv { padding:20px; }
#loginbuttonsdiv button { margin:0px 20px; }
#forgotpassdiv { text-align:center; }
#altauthinstrdiv { padding:0px 20px 10px 0px; }
#altauthmethods { padding:0px 0px 20px 30px; }
.liflab { font-size:medium; font-weight:normal; padding:10px; }
.liflabtd { height:30px; }
.centertablediv { display:table; margin:auto; }
.altauthspan { display:inline-block; padding:0px; width:60px; }
#closebookslide { clear:both; }

/* >> profile layout */
#proftopdiv { font-size:large; }
#profparticipatediv { }
#profpersonaldiv { padding:0px 0px 0px 10px; }
#profshoutdiv { padding:0px; }
#profcitydiv { font-size:small; padding: 0px 10px 5px 10px; }
#profinvitediv, #creategroupdiv { font-size:small; padding: 0px 10px 5px 10px; }
#fgfweblogdiv { font-size:small; padding: 5px 10px 0px 20px; }
#srchpenslinkdiv, #srchgroupslinkdiv { 
  font-size:small; padding: 20px 0px 0px 30px; }
.profpic { max-width:125px; max-height:125px; }
#profpicdiv { width:130px; text-align:right; }
#picplaceholderdiv { color:#999999; font-size:small;
  height:125px; width:110px; padding:10px; text-align:left; }
/* fixed width and height on srchpic so the summary lines line up */
.srchpic { width:30px; height:30px; vertical-align:middle; }
.badgespan { display:inline-block; width:36px; height:36px; padding:1px; }
.reviewbadge, .reviewbadgedis { 
  width:30px; height:30px; vertical-align:middle; }
.reviewbadgedis { opacity:0.3; filter:alpha(opacity=30); }
.bbk1, .bbk5, .bbk10, .bbk20 { padding:4px; }
.bbk1  { background:url('../img/bbk1.png') no-repeat center center; }
.bbk5  { background:url('../img/bbk5.png') no-repeat center center; }
.bbk10 { background:url('../img/bbk10.png') no-repeat center center; }
.bbk20 { background:url('../img/bbk20.png') no-repeat center center; }
.followico { width:30px; height:30px; vertical-align:bottom; }
.followingico { width:20px; height:20px; vertical-align:middle; }
#profbadgestd { padding: 0px 10px 5px 10px; }
.revtypeselectiondiv { padding:15px; font-size:x-large; 
  font-family:"Penscript", "Verdana", "Arial", "Helvetica", sans-serif;
}
/* width dynamically modified in profile.styleShout */
.textareatd { }
.shoutout, .shoutoutstatic { text-align:left;
  font-family:"Verdana", "Arial", "Helvetica", sans-serif;
  font-size:small; }
.shoutout { width:160px; min-height:100px; }
.shoutoutstatic { padding:10px; }
.grpostline { padding: 0px 0px 0px 0px; margin: 4px 0px 0px 0px; 
  font-size:x-small; }
.grpostlinehead { font-style:italic; }
#proftabsdiv { }
#proftabsul { }
#proftabsdiv ul { list-style:none; padding:0; margin:0; }
#proftabsdiv ul li { display:inline; 
  border-top-left-radius:5px; border-top-right-radius:5px;
  border-top:  1px solid #666;
  border-left: 1px solid #666;
  border-right: 1px solid #666;
 }
#proftabsdiv a { padding: 0 15px; }
.unselectedTab { border-bottom: 1px solid #666; }
.tabico { width:20px; height:20px; vertical-align:top; }
#profdisptable { }
#inlinkdiv { font-size:small; font-weight:normal; padding:10px; }
/* ... */

